--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@emotion/styled": "^10.0.23",
     "@styled-system/should-forward-prop": "^5.1.2",
     "emotion-theming": "^10.0.19",
+    "react-icons": "^3.8.0",
     "styled-system": "^5.1.2"
   }
 }
