--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
     "name": "prismatic-ui",
-    "version": "1.0.11",
+    "version": "1.0.12",
     "description": "A collection of React UI components.",
     "author": "kthomas95",
     "license": "MIT",
     "repository": "kthomas95/prismatic-ui",
     "main": "dist/index.js",
     "module": "dist/index.es.js",
+    "types": "dist/index.d.ts",
     "jsnext:main": "dist/index.es.js",
     "engines": {
         "node": ">=8",
@@ -27,50 +28,54 @@
         "react-dom": "^15.0.0 || ^16.0.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.7.5",
-        "@babel/plugin-external-helpers": "^7.7.4",
-        "@babel/preset-env": "^7.7.6",
-        "@babel/preset-react": "^7.7.4",
-        "@babel/preset-stage-0": "^7.0.0",
-        "@babel/preset-typescript": "^7.7.4",
-        "@rollup/plugin-typescript": "^2.0.1",
+        "@babel/core": "^7.8.3",
+        "@babel/plugin-external-helpers": "^7.8.3",
+        "@babel/preset-env": "^7.8.3",
+        "@babel/preset-react": "^7.8.3",
+        "@babel/preset-stage-0": "^7.8.3",
+        "@babel/preset-typescript": "^7.8.3",
+        "@rollup/plugin-typescript": "^2.1.0",
         "@svgr/rollup": "^4.3.3",
-        "@typescript-eslint/parser": "^2.11.0",
+        "@types/react": "^16.9.17",
+        "@types/styled-system": "^5.1.4",
+        "@typescript-eslint/parser": "^2.16.0",
         "babel-eslint": "^10.0.3",
         "cross-env": "^6.0.3",
-        "eslint": "^6.7.2",
+        "eslint": "^6.8.0",
         "eslint-config-standard": "^14.1.0",
         "eslint-config-standard-react": "^9.2.0",
         "eslint-import-resolver-typescript": "^2.0.0",
-        "eslint-plugin-import": "^2.19.1",
+        "eslint-plugin-import": "^2.20.0",
         "eslint-plugin-node": "^10.0.0",
         "eslint-plugin-promise": "^4.0.0",
         "eslint-plugin-react": "^7.10.0",
         "eslint-plugin-standard": "^4.0.1",
-        "gh-pages": "^2.1.1",
+        "gh-pages": "^2.2.0",
         "react": "^16.4.1",
         "react-dom": "^16.4.1",
         "react-scripts": "^3.3.0",
-        "rollup": "^1.27.12",
+        "rollup": "^1.29.0",
         "rollup-plugin-babel": "^4.3.3",
         "rollup-plugin-commonjs": "^10.1.0",
         "rollup-plugin-node-resolve": "^5.2.0",
         "rollup-plugin-peer-deps-external": "^2.2.0",
         "rollup-plugin-postcss": "^2.0.3",
+        "rollup-plugin-typescript2": "^0.25.3",
         "rollup-plugin-url": "^3.0.1",
         "tslib": "^1.10.0",
-        "typescript": "^3.7.3"
+        "typescript": "^3.7.4"
     },
     "files": [
         "dist"
     ],
     "dependencies": {
-        "@emotion/core": "^10.0.22",
+        "@emotion/core": "^10.0.27",
         "@emotion/is-prop-valid": "^0.8.5",
-        "@emotion/styled": "^10.0.23",
+        "@emotion/styled": "^10.0.27",
         "@styled-system/should-forward-prop": "^5.1.2",
-        "emotion-theming": "^10.0.19",
+        "@types/styled-system": "^5.1.4",
+        "emotion-theming": "^10.0.27",
         "react-icons": "^3.8.0",
-        "styled-system": "^5.1.2"
+        "styled-system": "^5.1.4"
     }
 }
