--- a/packages/prismatic-ui/package.json
+++ b/packages/prismatic-ui/package.json
@@ -1,11 +1,13 @@
 {
     "name": "prismatic-ui",
-    "version": "1.1.0",
-    "main": "index.js",
+    "version": "1.1.3",
     "repository": "https://github.com/kthomas95/prismatic-ui.git",
     "author": "Kyle Thomas <kyleathomas95@gmail.com>",
     "license": "MIT",
-    "private": true,
+    "private": false,
+    "files": ["dist"],
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
     "dependencies": {
         "@emotion/core": "^10.0.27",
         "@emotion/styled": "^10.0.27",
