--- a/packages/prismatic-ui/package.json
+++ b/packages/prismatic-ui/package.json
@@ -1,11 +1,13 @@
 {
     "name": "prismatic-ui",
-    "version": "1.1.3",
+    "version": "1.1.4",
     "repository": "https://github.com/kthomas95/prismatic-ui.git",
     "author": "Kyle Thomas <kyleathomas95@gmail.com>",
     "license": "MIT",
     "private": false,
-    "files": ["dist"],
+    "files": [
+        "dist"
+    ],
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "dependencies": {
@@ -13,6 +15,7 @@
         "@emotion/styled": "^10.0.27",
         "@styled-system/should-forward-prop": "^5.1.4",
         "emotion-theming": "^10.0.27",
+        "react-icons": "^3.8.0",
         "styled-components": "^5.0.0",
         "styled-system": "^5.1.4"
     },
