--- a/packages/prismatic-ui/package.json
+++ b/packages/prismatic-ui/package.json
@@ -1,6 +1,6 @@
 {
     "name": "prismatic-ui",
-    "version": "1.1.4",
+    "version": "1.1.10",
     "repository": "https://github.com/kthomas95/prismatic-ui.git",
     "author": "Kyle Thomas <kyleathomas95@gmail.com>",
     "license": "MIT",
@@ -10,22 +10,29 @@
     ],
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
+    "scripts": {
+        "start": "tsc -w"
+    },
     "dependencies": {
         "@emotion/core": "^10.0.27",
         "@emotion/styled": "^10.0.27",
         "@styled-system/should-forward-prop": "^5.1.4",
+        "@types/styled-system": "^5.1.4",
+        "@types/styled-system__css": "^5.0.4",
+        "csstype": "^2.6.8",
         "emotion-theming": "^10.0.27",
+        "framer-motion": "^1.8.3",
         "react-icons": "^3.8.0",
         "styled-components": "^5.0.0",
         "styled-system": "^5.1.4"
     },
     "peerDependencies": {
         "react": "^16.12.0",
-        "react-dom": "^16.12.0"
+        "react-dom": "^16.12.0",
+        "react-spring": "^8.0.27"
     },
     "devDependencies": {
         "@types/styled-components": "^4.4.2",
-        "@types/styled-system": "^5.1.4",
         "@types/styled-system__should-forward-prop": "^5.1.0"
     }
 }
