--- a/packages/prismatic-ui/package.json
+++ b/packages/prismatic-ui/package.json
@@ -22,19 +22,28 @@
         "bootstrap-icons": "^1.0.0-alpha2",
         "csstype": "^2.6.8",
         "emotion-theming": "^10.0.27",
-        "framer-motion": "^1.8.4",
+        "framer-motion": "^1.11.1",
         "react-icons": "^3.8.0",
         "styled-components": "^5.0.0",
         "styled-system": "^5.1.4"
     },
     "peerDependencies": {
-        "framer-motion": "^1.8.3",
+        "framer-motion": "^1.11.1",
         "react": "^16.12.0",
-        "react-dom": "^16.12.0",
-        "react-spring": "^8.0.27"
+        "react-dom": "^16.12.0"
     },
     "devDependencies": {
+        "@babel/core": "^7.10.4",
+        "@storybook/addon-info": "^5.3.19",
+        "@storybook/react": "^5.3.19",
         "@types/styled-components": "^4.4.2",
-        "@types/styled-system__should-forward-prop": "^5.1.0"
+        "@types/styled-system__should-forward-prop": "^5.1.0",
+        "babel-loader": "^8.1.0",
+        "react": "^16.13.1",
+        "react-docgen-typescript-loader": "^3.7.2",
+        "react-dom": "^16.13.1",
+        "react-spring": "^8.0.27",
+        "ts-loader": "^8.0.0",
+        "typescript": "^3.9.6"
     }
 }
