--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -44,11 +44,13 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^5.3.3",
-    "@storybook/addon-docs": "^5.3.0-rc.14",
-    "@storybook/addon-links": "^5.3.3",
-    "@storybook/addons": "^5.3.3",
-    "@storybook/preset-create-react-app": "^1.5.1",
-    "@storybook/react": "^5.3.3"
+    "@storybook/addon-actions": "^5.3.19",
+    "@storybook/addon-docs": "^5.3.19",
+    "@storybook/addon-links": "^5.3.19",
+    "@storybook/addon-toolbars": "^6.0.0-alpha.27",
+    "@storybook/addons": "^6.0.0-rc.1",
+    "@storybook/preset-create-react-app": "^3.1.3",
+    "@storybook/react": "^6.0.0-rc.1",
+    "@storybook/theming": "^5.3.19"
   }
 }
